syntax = "proto3";

option go_package = ".;proto";

service HumanAgnostic {
  rpc Generate (HumanAgnosticRequest) returns (HumanAgnosticReply) {}
}

message HumanAgnosticRequest {
  bytes cloth = 1;
  bytes mask = 2;
  bytes image = 3;
  bytes image_parse = 4;
  bytes image_pose = 5;
  string pose_json = 6;
  bytes parse_agnostic = 7;
  bytes image_densepose = 8;
}

message HumanAgnosticReply {
  string message = 1;
}